02_Syntax-Analysis/Exercise_2/target/main/mp/parser/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'return'", "'float'", "'int'", "'{'", 
                     "'}'", "'('", "')'", "';'", "','", "'='", "'+'", "'-'", 
                     "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "RETURN", "FLOAT", "INT", "LB", "RB", 
                      "LP", "RP", "SM", "CM", "EQ", "ADD", "SUB", "MUL", 
                      "DIV", "FLOATLIT", "INTLIT", "ID", "WS", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_variables_declaration = 1
    RULE_function_declaration = 2
    RULE_body = 3
    RULE_variables = 4
    RULE_stmt_assign = 5
    RULE_stmt_call = 6
    RULE_stmt_return = 7
    RULE_exp = 8
    RULE_operands = 9
    RULE_func_call = 10
    RULE_mc_type = 11

    ruleNames =  [ "program", "variables_declaration", "function_declaration", 
                   "body", "variables", "stmt_assign", "stmt_call", "stmt_return", 
                   "exp", "operands", "func_call", "mc_type" ]

    EOF = Token.EOF
    RETURN=1
    FLOAT=2
    INT=3
    LB=4
    RB=5
    LP=6
    RP=7
    SM=8
    CM=9
    EQ=10
    ADD=11
    SUB=12
    MUL=13
    DIV=14
    FLOATLIT=15
    INTLIT=16
    ID=17
    WS=18
    ERROR_CHAR=19
    UNCLOSE_STRING=20
    ILLEGAL_ESCAPE=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def variables_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Variables_declarationContext)
            else:
                return self.getTypedRuleContext(MPParser.Variables_declarationContext,i)


        def function_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Function_declarationContext)
            else:
                return self.getTypedRuleContext(MPParser.Function_declarationContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.FLOAT or _la==MPParser.INT:
                self.state = 26
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 24
                    self.variables_declaration()
                    pass

                elif la_ == 2:
                    self.state = 25
                    self.function_declaration()
                    pass


                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 31
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Variables_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variables(self):
            return self.getTypedRuleContext(MPParser.VariablesContext,0)


        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def getRuleIndex(self):
            return MPParser.RULE_variables_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariables_declaration" ):
                return visitor.visitVariables_declaration(self)
            else:
                return visitor.visitChildren(self)




    def variables_declaration(self):

        localctx = MPParser.Variables_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_variables_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.variables()
            self.state = 34
            self.match(MPParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mc_type(self):
            return self.getTypedRuleContext(MPParser.Mc_typeContext,0)


        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LP(self):
            return self.getToken(MPParser.LP, 0)

        def RP(self):
            return self.getToken(MPParser.RP, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def body(self):
            return self.getTypedRuleContext(MPParser.BodyContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def variables(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VariablesContext)
            else:
                return self.getTypedRuleContext(MPParser.VariablesContext,i)


        def SM(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SM)
            else:
                return self.getToken(MPParser.SM, i)

        def getRuleIndex(self):
            return MPParser.RULE_function_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declaration" ):
                return visitor.visitFunction_declaration(self)
            else:
                return visitor.visitChildren(self)




    def function_declaration(self):

        localctx = MPParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.mc_type()
            self.state = 37
            self.match(MPParser.ID)
            self.state = 38
            self.match(MPParser.LP)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.FLOAT or _la==MPParser.INT:
                self.state = 39
                self.variables()
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MPParser.SM:
                    self.state = 40
                    self.match(MPParser.SM)
                    self.state = 41
                    self.variables()
                    self.state = 46
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 49
            self.match(MPParser.RP)
            self.state = 50
            self.match(MPParser.LB)
            self.state = 51
            self.body()
            self.state = 52
            self.match(MPParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variables_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Variables_declarationContext)
            else:
                return self.getTypedRuleContext(MPParser.Variables_declarationContext,i)


        def stmt_assign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Stmt_assignContext)
            else:
                return self.getTypedRuleContext(MPParser.Stmt_assignContext,i)


        def stmt_call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Stmt_callContext)
            else:
                return self.getTypedRuleContext(MPParser.Stmt_callContext,i)


        def stmt_return(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Stmt_returnContext)
            else:
                return self.getTypedRuleContext(MPParser.Stmt_returnContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = MPParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.RETURN) | (1 << MPParser.FLOAT) | (1 << MPParser.INT) | (1 << MPParser.ID))) != 0):
                self.state = 58
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 54
                    self.variables_declaration()
                    pass

                elif la_ == 2:
                    self.state = 55
                    self.stmt_assign()
                    pass

                elif la_ == 3:
                    self.state = 56
                    self.stmt_call()
                    pass

                elif la_ == 4:
                    self.state = 57
                    self.stmt_return()
                    pass


                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariablesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mc_type(self):
            return self.getTypedRuleContext(MPParser.Mc_typeContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.ID)
            else:
                return self.getToken(MPParser.ID, i)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.CM)
            else:
                return self.getToken(MPParser.CM, i)

        def getRuleIndex(self):
            return MPParser.RULE_variables

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariables" ):
                return visitor.visitVariables(self)
            else:
                return visitor.visitChildren(self)




    def variables(self):

        localctx = MPParser.VariablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variables)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.mc_type()
            self.state = 64
            self.match(MPParser.ID)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.CM:
                self.state = 65
                self.match(MPParser.CM)
                self.state = 66
                self.match(MPParser.ID)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Stmt_assignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def EQ(self):
            return self.getToken(MPParser.EQ, 0)

        def exp(self):
            return self.getTypedRuleContext(MPParser.ExpContext,0)


        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def getRuleIndex(self):
            return MPParser.RULE_stmt_assign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_assign" ):
                return visitor.visitStmt_assign(self)
            else:
                return visitor.visitChildren(self)




    def stmt_assign(self):

        localctx = MPParser.Stmt_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stmt_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(MPParser.ID)
            self.state = 73
            self.match(MPParser.EQ)
            self.state = 74
            self.exp(0)
            self.state = 75
            self.match(MPParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Stmt_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_call(self):
            return self.getTypedRuleContext(MPParser.Func_callContext,0)


        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def getRuleIndex(self):
            return MPParser.RULE_stmt_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_call" ):
                return visitor.visitStmt_call(self)
            else:
                return visitor.visitChildren(self)




    def stmt_call(self):

        localctx = MPParser.Stmt_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_stmt_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.func_call()
            self.state = 78
            self.match(MPParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Stmt_returnContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(MPParser.RETURN, 0)

        def exp(self):
            return self.getTypedRuleContext(MPParser.ExpContext,0)


        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def getRuleIndex(self):
            return MPParser.RULE_stmt_return

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_return" ):
                return visitor.visitStmt_return(self)
            else:
                return visitor.visitChildren(self)




    def stmt_return(self):

        localctx = MPParser.Stmt_returnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stmt_return)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(MPParser.RETURN)
            self.state = 81
            self.exp(0)
            self.state = 82
            self.match(MPParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operands(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.OperandsContext)
            else:
                return self.getTypedRuleContext(MPParser.OperandsContext,i)


        def SUB(self):
            return self.getToken(MPParser.SUB, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ExpContext)
            else:
                return self.getTypedRuleContext(MPParser.ExpContext,i)


        def ADD(self):
            return self.getToken(MPParser.ADD, 0)

        def MUL(self):
            return self.getToken(MPParser.MUL, 0)

        def DIV(self):
            return self.getToken(MPParser.DIV, 0)

        def getRuleIndex(self):
            return MPParser.RULE_exp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)



    def exp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.ExpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_exp, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 85
                self.operands()
                self.state = 86
                self.match(MPParser.SUB)
                self.state = 87
                self.operands()
                pass

            elif la_ == 2:
                self.state = 89
                self.operands()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 100
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 98
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = MPParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 92
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 93
                        self.match(MPParser.ADD)
                        self.state = 94
                        self.exp(4)
                        pass

                    elif la_ == 2:
                        localctx = MPParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 95
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 96
                        _la = self._input.LA(1)
                        if not(_la==MPParser.MUL or _la==MPParser.DIV):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 97
                        self.exp(3)
                        pass

             
                self.state = 102
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class OperandsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MPParser.LP, 0)

        def exp(self):
            return self.getTypedRuleContext(MPParser.ExpContext,0)


        def RP(self):
            return self.getToken(MPParser.RP, 0)

        def func_call(self):
            return self.getTypedRuleContext(MPParser.Func_callContext,0)


        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def INTLIT(self):
            return self.getToken(MPParser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(MPParser.FLOATLIT, 0)

        def getRuleIndex(self):
            return MPParser.RULE_operands

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperands" ):
                return visitor.visitOperands(self)
            else:
                return visitor.visitChildren(self)




    def operands(self):

        localctx = MPParser.OperandsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_operands)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.match(MPParser.LP)
                self.state = 104
                self.exp(0)
                self.state = 105
                self.match(MPParser.RP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.func_call()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.match(MPParser.ID)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self.match(MPParser.INTLIT)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 110
                self.match(MPParser.FLOATLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LP(self):
            return self.getToken(MPParser.LP, 0)

        def RP(self):
            return self.getToken(MPParser.RP, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ExpContext)
            else:
                return self.getTypedRuleContext(MPParser.ExpContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.CM)
            else:
                return self.getToken(MPParser.CM, i)

        def getRuleIndex(self):
            return MPParser.RULE_func_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_call" ):
                return visitor.visitFunc_call(self)
            else:
                return visitor.visitChildren(self)




    def func_call(self):

        localctx = MPParser.Func_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_func_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(MPParser.ID)
            self.state = 114
            self.match(MPParser.LP)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.LP) | (1 << MPParser.FLOATLIT) | (1 << MPParser.INTLIT) | (1 << MPParser.ID))) != 0):
                self.state = 115
                self.exp(0)
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MPParser.CM:
                    self.state = 116
                    self.match(MPParser.CM)
                    self.state = 117
                    self.exp(0)
                    self.state = 122
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 125
            self.match(MPParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Mc_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MPParser.INT, 0)

        def FLOAT(self):
            return self.getToken(MPParser.FLOAT, 0)

        def getRuleIndex(self):
            return MPParser.RULE_mc_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMc_type" ):
                return visitor.visitMc_type(self)
            else:
                return visitor.visitChildren(self)




    def mc_type(self):

        localctx = MPParser.Mc_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_mc_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            _la = self._input.LA(1)
            if not(_la==MPParser.FLOAT or _la==MPParser.INT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[8] = self.exp_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def exp_sempred(self, localctx:ExpContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 2)
         




